feat: SSE/workspace/files 修bug
